# synergy-dataset-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  advanced_graph.py  analytics.py  pyproject.toml
.github/workflows/: python-lint.yml
examples/: advanced_graph.py
pyodss/: __init__.py  __main__.py  base.py  config.py
synergy_dataset/: __init__.py  __main__.py  base.py  config.py
tests/: test_pyodss.py  test_synergy.py
