[project]
name = "synergy-dataset"
description = "Python package for the SYNERGY dataset"
authors = [
    { name = "Jonathan de Bruin", email = "asreview@uu.nl" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = {text = "MIT"}
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = ["pyalex", "tabulate", "tqdm"]

[project.optional-dependencies]
lint = ["flake8", "flake8-import-order"]
test = ["pytest"]

[project.scripts]
synergy-dataset = "synergy_dataset.__main__:main"
synergy_dataset = "synergy_dataset.__main__:main"
synergy = "synergy_dataset.__main__:main"

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["synergy_dataset"]

[tool.setuptools_scm]
write_to = "synergy_dataset/_version.py"
